<resources>
    <string name="app_name">Food Recipes</string>
    <string name="breakfast">Breakfast</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="dessert">Dessert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_view">Image View</string>
    <string name="app_cook">Food Recipes</string>
    <string name="name_shrimp">Garlic Butter <br />Shrimp</string>
    <string name="detail">Detail</string>
    <string name="_1_2_k">1.2 k</string>
    <string name="cooked">Cooked</string>
    <string name="seafood">Seafood</string>
    <string name="image_button">Image Button</string>
    <string name="calories_dumy">7,22</string>
    <string name="carbo_dumy">822</string>
    <string name="protein_dumy">5277</string>
    <string name="calories">Calories</string>
    <string name="carbo">Carbo</string>
    <string name="_900">900</string>
    <string name="protein">Protein</string>
    <string name="description">Description</string>
    <string name="resep">Resep</string>
    <string name="ingredients">Ingredients :</string>
    <string name="value_ingredients">Ingredients</string>
    <string name="instructions">Instructions :</string>
    <string name="value_instructions">Instructions</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Accumsan in nisl nisi scelerisque eu. Semper feugiat nibh sed pulvinar proin gravida. Quisque sagittis purus sit amet. Faucibus turpis in eu mi bibendum. Quisque egestas diam in arcu cursus euismod quis viverra. Dictumst quisque sagittis purus sit amet volutpat consequat. Tristique risus nec feugiat in. Nunc id cursus metus aliquam. Fames ac turpis egestas maecenas pharetra convallis posuere morbi leo. Leo integer malesuada nunc vel. Ac feugiat sed lectus vestibulum mattis ullamcorper velit. Pulvinar etiam non quam lacus suspendisse faucibus. Donec pretium vulputate sapien nec sagittis aliquam malesuada bibendum. Montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada. Vehicula ipsum a arcu cursus vitae congue. Ultrices dui sapien eget mi proin sed libero enim. Fermentum iaculis eu non diam phasellus. Vitae semper quis lectus nulla. Eget aliquet nibh praesent tristique magna sit amet purus.</string>

</resources>