<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_item_recipe"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_300dp"
    android:layout_margin="@dimen/_8dp"
    app:cardCornerRadius="@dimen/_20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_item_recipe"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200dp"
            android:contentDescription="@string/image_view"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_shrimp" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:text="@string/name_shrimp"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_item_recipe" />

        <TextView
            android:id="@+id/tv_item_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="@dimen/_4dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:text="@string/breakfast"
            android:textSize="@dimen/_10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_item_name" />

        <TextView
            android:id="@+id/tv_item_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20dp"
            android:text="@string/_1_2_k"
            android:textSize="@dimen/_14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_cooked"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_item_name" />

        <TextView
            android:id="@+id/tv_item_cooked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:text="@string/cooked"
            android:textSize="@dimen/_10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_item_number" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>