<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/cl_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/orange"
            app:expandedTitleTextAppearance="@style/expandedBarTextStyle"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/detail">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300dp">


                <ImageView
                    android:id="@+id/iv_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_view"
                    android:foreground="@drawable/transparent"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/img_shrimp" />

                <TextView
                    android:id="@+id/tv_name_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10dp"
                    android:layout_marginEnd="@dimen/_10dp"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:text="@string/name_shrimp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:theme="?attr/actionBarTheme"
                app:layout_collapseMode="pin" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_40dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_calories"
                android:layout_width="105dp"
                android:layout_height="@dimen/_100dp"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                app:cardBackgroundColor="@color/colorYellow"
                app:cardCornerRadius="@dimen/_10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_calories_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:gravity="center"
                    android:text="@string/calories_dumy"
                    android:textSize="@dimen/_24sp" />

                <TextView
                    android:id="@+id/tv_calories_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/_30dp"
                    android:gravity="center_horizontal"
                    android:text="@string/calories"
                    android:textSize="@dimen/_12sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_carbo"
                android:layout_width="105dp"
                android:layout_height="@dimen/_100dp"
                android:layout_marginTop="@dimen/_20dp"
                app:cardBackgroundColor="@color/colorBlue"
                app:cardCornerRadius="@dimen/_10dp"
                app:layout_constraintStart_toEndOf="@+id/cv_calories"
                app:layout_constraintEnd_toStartOf="@+id/cv_protein"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_carbo_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:gravity="center"
                    android:text="@string/carbo_dumy"
                    android:textSize="@dimen/_24sp" />

                <TextView
                    android:id="@+id/tv_carbo_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/_30dp"
                    android:gravity="center_horizontal"
                    android:text="@string/carbo"
                    android:textSize="@dimen/_12sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_protein"
                android:layout_width="105dp"
                android:layout_height="@dimen/_100dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                app:cardBackgroundColor="@color/colorRed"
                app:cardCornerRadius="@dimen/_10dp"
                app:layout_constraintBottom_toBottomOf="@+id/cv_calories"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_protein_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:gravity="center"
                    android:text="@string/_900"
                    android:textSize="@dimen/_24sp" />

                <TextView
                    android:id="@+id/tv_protein_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/_30dp"
                    android:gravity="center_horizontal"
                    android:text="@string/protein"
                    android:textSize="@dimen/_12sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_description_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_40dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_calories" />

            <TextView
                android:id="@+id/tv_resep_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:text="@string/resep"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description_detail" />

            <TextView
                android:id="@+id/tv_ingredients_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:text="@string/ingredients"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_resep_label" />

            <TextView
                android:id="@+id/tv_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_5dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:text="@string/dummy_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ingredients_label" />

            <TextView
                android:id="@+id/tv_instruction_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:text="@string/instructions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ingredients" />

            <TextView
                android:id="@+id/tv_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_5dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:text="@string/dummy_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_instruction_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>