<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.BreakfastFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_breakfast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_50dp">


        <TextView
            android:id="@+id/tv_name_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/app_cook"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cv_main_breakfast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_main_breakfast"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_220dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_16dp"
            app:cardCornerRadius="@dimen/_20dp"
            app:cardElevation="@dimen/_2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name_app">

            <ImageView
                android:id="@+id/iv_shrimp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_view"
                android:foreground="@drawable/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_shrimp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_20dp">

                <TextView
                    android:id="@+id/tv_name_shrimp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/name_shrimp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_24sp" />

                <LinearLayout
                    android:id="@+id/cv_inner"
                    android:layout_width="@dimen/_80dp"
                    android:layout_height="@dimen/_50dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/rounded_shape"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6dp"
                        android:gravity="center"
                        android:text="@string/_1_2_k"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_cooked"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/cooked"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_8sp" />
                </LinearLayout>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <ImageButton
            android:id="@+id/ib_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@color/white"
            android:contentDescription="@string/image_button"
            android:src="@drawable/breakfast"
            app:layout_constraintEnd_toStartOf="@+id/ib_vegetarian"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_main_breakfast" />

        <ImageButton
            android:id="@+id/ib_vegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@color/white"
            android:contentDescription="@string/image_button"
            android:src="@drawable/vegetarian"
            app:layout_constraintEnd_toStartOf="@+id/ib_dessert"
            app:layout_constraintStart_toEndOf="@+id/ib_breakfast"
            app:layout_constraintTop_toBottomOf="@+id/cv_main_breakfast" />

        <ImageButton
            android:id="@+id/ib_dessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@color/white"
            android:contentDescription="@string/image_button"
            android:src="@drawable/dessert"
            app:layout_constraintEnd_toStartOf="@+id/ib_seafood"
            app:layout_constraintStart_toEndOf="@+id/ib_vegetarian"
            app:layout_constraintTop_toBottomOf="@+id/cv_main_breakfast" />

        <ImageButton
            android:id="@+id/ib_seafood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@color/white"
            android:contentDescription="@string/image_button"
            android:src="@drawable/sea_food"
            app:layout_constraintBottom_toBottomOf="@+id/ib_dessert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ib_dessert"
            app:layout_constraintTop_toBottomOf="@+id/cv_main_breakfast" />

        <TextView
            android:id="@+id/tv_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:text="@string/breakfast"
            app:layout_constraintEnd_toEndOf="@+id/ib_breakfast"
            app:layout_constraintStart_toStartOf="@+id/ib_breakfast"
            app:layout_constraintTop_toBottomOf="@+id/ib_breakfast" />

        <TextView
            android:id="@+id/tv_vegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:text="@string/vegetarian"
            app:layout_constraintEnd_toEndOf="@+id/ib_vegetarian"
            app:layout_constraintStart_toStartOf="@+id/ib_vegetarian"
            app:layout_constraintTop_toBottomOf="@+id/ib_vegetarian" />

        <TextView
            android:id="@+id/tv_dessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:text="@string/dessert"
            app:layout_constraintEnd_toEndOf="@+id/ib_dessert"
            app:layout_constraintStart_toStartOf="@+id/ib_dessert"
            app:layout_constraintTop_toBottomOf="@+id/ib_dessert" />

        <TextView
            android:id="@+id/tv_seafood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:text="@string/seafood"
            app:layout_constraintEnd_toEndOf="@+id/ib_seafood"
            app:layout_constraintStart_toStartOf="@+id/ib_seafood"
            app:layout_constraintTop_toBottomOf="@+id/ib_seafood" />

        <TextView
            android:id="@+id/tv_breakfast_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_40dp"
            android:text="@string/breakfast"
            android:textColor="@color/black"
            android:textSize="@dimen/_24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_breakfast" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_breakfast"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_breakfast_title"
            tools:listitem="@layout/item_recipe"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>